docs: update swagger
